Check out this homescreen

--- a/homescreen.html
+++ b/homescreen.html
@@ -1,29 +1,48 @@
+<!DOCTYPE HTML>
 <html>
 <head>
+
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="my.css" />
 </head>
 <body>
 
 <script src="jquery-1.7.2.js"></script>
 
+<div class="header">
 <table>
 <tr>
-	<td name="grades" class="imagebutton">
-		<img src="2febb.png" />
+	<td>
+		<img src="images/images.jpg" width="150px" height="150px"/>
+	</td>
+	<td>
+	</td>
+	<td>
+		<p> Andy Grade 7 </p>
+	</td>
+</tr>
+</table>
+</div>
+<table>
+<tr>
+	<td>
+		<img src="images/2febb.png" name="grades" class="imagebutton" />
 		<p> Grades </p>
 	</td>
-	<td name="assignments" class="imagebutton">
-		<img src="calendario.png" />
+	<td>
+		<img src="images/calendario.png" name="assignments" class="imagebutton"/>
 		<p> Assignments </p>
 	</td>
 </tr>
 <tr>
-	<td name="email" class="imagebutton">
-		<img src="email.png" />
-		<p> Email the teacher </p>
+	<td>
+		<img src="images/email.png" name="email" class="imagebutton" />
+		<p> Email Teacher </p>
 	</td>
-	<td name="help" class="imagebutton">
-		<img src="help.png" />
+	<td>
+		<img src="images/help.png" name="help" class="imagebutton" />
 		<p> Subject Help </p>
 	</td>
 </tr>
