--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>
         </title>
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
-        <link rel="stylesheet" href="my.css" />
+        <link rel="stylesheet" href="jquerymobile.css" />
+        <link rel="stylesheet" href="login.css" />
         <style>
             /* App custom styles */
         </style>
@@ -18,24 +18,25 @@
     <body>
         <div data-role="page" id="page1">
             <div data-role="content">
-                <div style="width: 400px; height: 400px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;">
-                    <img src="http://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px" />
+                <div style="display: block; margin-left: auto; margin-right: auto; background-color: #efefef; margin-top: 40px;">
+                    <img src="images/logo.png" alt="image" style="display: block; margin-left: auto; margin-right: auto;" />
                 </div>
-                <div data-role="fieldcontain">
-                    <fieldset data-role="controlgroup" data-mini="true">
+                <div data-role="fieldcontain" style="display:block; margin-left:-38px; margin-right:auto;">
+                    <fieldset data-role="controlgroup">
                         <label for="textinput1">
                         </label>
                         <input id="textinput1" placeholder="Username" value="" type="text" />
                     </fieldset>
                 </div>
-                <div data-role="fieldcontain">
+                <div data-role="fieldcontain" style="display:block; margin-left:-38px; margin-right:auto;">
                     <fieldset data-role="controlgroup">
                         <label for="textinput2">
                         </label>
                         <input id="textinput2" placeholder="Password" value="" type="password" />
                     </fieldset>
                 </div>
-                <input type="submit" data-theme="b" data-icon="arrow-r" data-iconpos="right" value="Submit" />
+                <a href="homescreen.html" data-transition="slide" data-theme="b" data-icon="arrow-r" data-iconpos="right" data-role="button" style="display:block; margin-left:auto; margin-right:auto; margin-top: 40px; width: 300px">Submit</a>
+                <!-- <input stlye="margin-top: 40px;" type="submit" data-theme="b" data-icon="arrow-r" data-iconpos="right" value="Submit" /> -->
             </div>
         </div>
         <script>
