--- a/homescreen.html
+++ b/homescreen.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -20,7 +20,7 @@
 	<td>
 	</td>
 	<td>
-		<p> Andy Grade 7 </p>
+		<p style="color:white;"> Andy Grade 7 </p>
 	</td>
 </tr>
 </table>
