--- a/template.html
+++ b/template.html
@@ -21,18 +21,26 @@
                <h5 style="font-size: 30px">
                     Select Child
                 </h5>
-                <a data-role="button" data-inline="true" data-rel="back" data-transition="fade" data-theme="b"  data-icon="arrow-l" data-iconpos="left" style="position: absolute; top: 21%;">
-                    <span style="font-size: 20px">Back</span>
-                </a>
             </div>
             <div data-role="content">
 
 
             </div>
-            <div data-theme="a" data-id="myfooter" data-role="footer" data-position="fixed" style="height: 40px;">
-                <a data-role="button" data-inline="true" data-transition="fade" data-theme="b" href="#login" data-icon="arrow-d" data-iconpos="left" style="position: absolute; bottom: 12%; left: 35%; width: 30%">
-                    <span style="font-size: 16px">Exit</span>
-                </a>
+            <div data-theme="a" data-role="footer" data-position="fixed" >
+                <div data-role="navbar" data-iconpos="top">
+                    <ul>
+                        <li>
+                            <a data-transition="fade" data-rel="back" data-theme="" data-icon="back" >
+                                <span style="font-size: 30px">Back</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#login" data-theme="" data-icon="delete">
+                                <span style="font-size: 30px">Exit</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
        
