newlogin, delete files

--- a/login.html
+++ b/login.html
@@ -16,6 +16,8 @@
         </script>
     </head>
     <body>
+
+        <!-- LOGIN PAGE -->
         <div data-role="page" id="login">
             <div data-role="content">
                 
@@ -38,28 +40,24 @@
                 <a href="#select" data-transition="slide" data-theme="b" data-icon="arrow-r" data-iconpos="right" data-role="button" style="position: absolute; top: 83%; left: 21%; width: 60%; height: 9%"><span style="font-size: 36px">Login</span></a>
             </div>
         </div>
+
+        <!-- SELECT CHILD PAGE -->
         <div data-role="page" id="select">
-            <div data-theme="a" data-role="header" style="height: 30%;">
+            <div data-theme="a" data-role="header">
                <h5 style="font-size: 30px">
                     Select Child
                 </h5>
             </div>
-            <div data-role="content">
-                <!-- <img data-inline="true" src="images/andy.png" alt="image" style="position: absolute; top: 25%; left: 6%;" />
-               
-                <a data-role="button" data-transition="fade" href="#homescreen" data-inline="true" style="position: absolute; top: 27%; left: 33%;">
-                    <span style="font-size: 34px">Andy - Grade 7</span>
-                </a> -->
+            <div data-role="content">                
 
-                <a data-role="button" data-inline="true" data-transition="fade" href="#homescreen" style="position: absolute; left: 5%; top: 20%; width: 40%; height: 25%">
-                                 <img src="images/andy.png" style="height: 70%; width: 80%"/>
-                                 <h3 style="color: black; margin: auto"> Andy - Grade 7 </h3>
+                <a data-role="button" data-inline="true" data-transition="fade" href="#homescreen" style="position: absolute; left: 29%; top: 15%; width: 38%; height: 30%">
+                                 <img src="images/andy.png" style="height: 70%; width: 100%"/>
+                                 <h3 style="color: black; margin-top: 7px"> Andy</h3>
                 </a>
 
-                <img data-inline="true" src="images/joey.png" alt="image" style="position: absolute; top: 61%; left: 6%;" />
-
-                <a data-role="button" data-transition="fade" href="#homescreen" data-inline="true" style="position: absolute; top: 63%; left: 33%;">
-                    <span style="font-size: 34px">Joey - Grade 4</span>
+                <a data-role="button" data-inline="true" data-transition="fade" href="#homescreen" style="position: absolute; left: 29%; top: 50%; width: 38%; height: 30%">
+                                 <img src="images/joey.png" style="height: 70%; width: 100%"/>
+                                 <h3 style="color: black; margin-top: 7px"> Joey </h3>
                 </a>
             </div>
             <div data-theme="a" data-role="footer" data-position="fixed" >
@@ -79,8 +77,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- HOMESCREEN -->
         <div data-role="page" id="homescreen">
-            <div data-theme="a" data-role="header" style="height: 30%;">
+            <div data-theme="a" data-role="header">
                <h5 style="font-size: 30px">
                     Andy - Home
                 </h5>
@@ -134,8 +134,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- WORKSHEET -->
         <div data-role="page" id="worksheet">
-            <div data-theme="a" data-role="header" style="height: 30%;">
+            <div data-theme="a" data-role="header">
                <h5 style="font-size: 30px">
                     Worksheet 3
                 </h5>
