--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
     </head>
     <body>
          <div data-role="page" id="select">
-            <div data-theme="a" data-role="header" style="height: 30%;">
+            <div data-theme="a" data-role="header">
                <h5 style="font-size: 30px">
                     Select Child
                 </h5>
