--- a/dueDates.html
+++ b/dueDates.html
@@ -26,27 +26,21 @@
                 <div class="ui-grid-b">
                     <div class="ui-block-a">
                         <div data-theme="b" data-role="header">
-                            <h1>
-                                Assignment
-                            </h1>
+                            Assignment
                         </div>
                     </div>
                     <div class="ui-block-b">
                         <div data-theme="b" data-role="header">
-                            <h3>
-                                Due Date
-                            </h3>
+                            Due Date
                         </div>
                     </div>
                     <div class="ui-block-c">
                         <div data-theme="b" data-role="header">
-                            <h3>
-                                Status
-                            </h3>
+                            Status
                         </div>
                     </div>
                     <div class="ui-block-a">
-                        <a data-role="button" data-transition="fade" data-theme="e" href="page1">
+                        <a data-role="button" style="font-size: 10px;" data-transition="fade" data-theme="e" href="page1">
                             Chapter 4, Problems 1-20
                         </a>
                     </div>
@@ -69,7 +63,7 @@
                         </div>
                     </div>
                     <div class="ui-block-a">
-                        <a data-role="button" data-transition="fade" data-theme="e" href="page1">
+                        <a data-role="button" style="font-size: 10px;" data-transition="fade" data-theme="e" href="page1">
                             Worksheet 3
                         </a>
                     </div>
@@ -92,7 +86,7 @@
                         </div>
                     </div>
                     <div class="ui-block-a">
-                        <a data-role="button" data-transition="fade" data-theme="e" href="page1">
+                        <a data-role="button" style="font-size: 10px;" data-transition="fade" data-theme="e" href="page1">
                             Assignment 1
                         </a>
                     </div>
@@ -112,24 +106,6 @@
                                     Submitted
                                 </strong>
                             </p>
-                        </div>
-                    </div>
-                    <div class="ui-block-a">
-                        <div data-theme="b" data-role="footer">
-                            <h3>
-                            </h3>
-                        </div>
-                    </div>
-                    <div class="ui-block-b">
-                        <div data-theme="b" data-role="footer">
-                            <h3>
-                            </h3>
-                        </div>
-                    </div>
-                    <div class="ui-block-c">
-                        <div data-theme="b" data-role="footer">
-                            <h3>
-                            </h3>
                         </div>
                     </div>
                 </div>
