--- a/login.html
+++ b/login.html
@@ -142,6 +142,7 @@
                     Worksheet 3
                 </h5>
             </div>
+
             <div data-role="content">
                 <img data-inline="true" src="images/joey.png" alt="image" style="position: absolute; top: 17%; left: 5%;" />
 
@@ -149,6 +150,7 @@
                     <span style="font-size: 28px">Get help with this homework</span>
                 </a>
             </div>
+
             <div data-theme="a" data-role="footer" data-position="fixed" >
                 <div data-role="navbar" data-iconpos="top">
                     <ul>
@@ -167,6 +169,119 @@
             </div>
         </div>
        
+        <!-- DUE DATES -->
+        <div data-role="page" id="duedates">
+            <div data-theme="a" data-role="header">
+                <h5 style="font-size: 30px">
+                    Select Child
+                </h5>
+            </div>
+            <div data-role="content">
+                <div class="ui-grid-b">
+                    <div class="ui-block-a">
+                        <div data-theme="b" data-role="header">
+                            Assignment
+                        </div>
+                    </div>
+                    <div class="ui-block-b">
+                        <div data-theme="b" data-role="header">
+                            Due Date
+                        </div>
+                    </div>
+                    <div class="ui-block-c">
+                        <div data-theme="b" data-role="header">
+                            Status
+                        </div>
+                    </div>
+                    <div class="ui-block-a">
+                        <a data-role="button" style="font-size: 10px;" data-transition="fade" data-theme="e" href="page1">
+                            Chapter 4, Problems 1-20
+                        </a>
+                    </div>
+                    <div class="ui-block-b">
+                        <div>
+                            <p style="text-align: center; " data-mce-style="text-align: center;">
+                                <strong>
+                                    May 17th
+                                </strong>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ui-block-c">
+                        <div>
+                            <p style="text-align: center; " data-mce-style="text-align: center;">
+                                <strong>
+                                    Not Submitted
+                                </strong>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ui-block-a">
+                        <a data-role="button" style="font-size: 10px;" data-transition="fade" data-theme="e" href="page1">
+                            Worksheet 3
+                        </a>
+                    </div>
+                    <div class="ui-block-b">
+                        <div>
+                            <p style="text-align: center; " data-mce-style="text-align: center;">
+                                <strong>
+                                    May 21st
+                                </strong>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ui-block-c">
+                        <div>
+                            <p style="text-align: center; " data-mce-style="text-align: center;">
+                                <strong>
+                                    Not Submitted
+                                </strong>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ui-block-a">
+                        <a data-role="button" style="font-size: 10px;" data-transition="fade" data-theme="e" href="page1">
+                            Assignment 1
+                        </a>
+                    </div>
+                    <div class="ui-block-b">
+                        <div>
+                            <p style="text-align: center; ">
+                                <strong>
+                                    May 24th
+                                </strong>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ui-block-c">
+                        <div>
+                            <p style="text-align: center; ">
+                                <strong>
+                                    Submitted
+                                </strong>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div data-theme="a" data-role="footer" data-position="fixed" >
+                <div data-role="navbar" data-iconpos="top">
+                    <ul>
+                        <li>
+                            <a data-transition="fade" data-rel="back" data-theme="" data-icon="back" >
+                                <span style="font-size: 30px">Back</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#login" data-theme="" data-icon="delete">
+                                <span style="font-size: 30px">Exit</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <script>
             //App custom javascript
         </script>
