new login with alghw

--- a/template.html
+++ b/template.html
@@ -35,6 +35,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="#homescreen" data-theme="" data-icon="home">
+                                <span style="font-size: 30px">Home</span>
+                            </a>
+                        </li>
+                        <li>
                             <a href="#login" data-theme="" data-icon="delete">
                                 <span style="font-size: 30px">Exit</span>
                             </a>
