new login with alghw

--- a/login.html
+++ b/login.html
@@ -315,10 +315,10 @@
                         <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid white">
-                                    <h2> Assignments </h2>
+                                    <h2 style="font-size: 24px"> Assignments </h2>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h2> Score </h2>
+                                    <h2 style="font-size: 24px"> Score </h2>
                                 </td>
                             </tr>
                         </table>
@@ -327,10 +327,10 @@
                         <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid black">
-                                    <h3> Homework 4 </h3>
+                                    <h3 style="font-size: 18px"> Homework 4 </h3>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h3 style="color:red"> 0/10 </h3>
+                                    <h3 style="color:red; font-size: 18px"> 0/10 </h3>
                                 </td>
                             </tr>
                         </table>
@@ -339,10 +339,10 @@
                         <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid black">
-                                    <h3> Homework 3 </h3>
+                                    <h3 style="font-size: 18px"> Homework 3 </h3>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h3> 7/10 </h3>
+                                    <h3 style="font-size: 18px"> 7/10 </h3>
                                 </td>
                             </tr>
                         </table>
@@ -351,10 +351,10 @@
                         <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid black">
-                                    <h3> Homework 2 </h3>
+                                    <h3 style="font-size: 18px"> Homework 2 </h3>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h3> 10/10 </h3>
+                                    <h3 style="font-size: 18px"> 10/10 </h3>
                                 </td>
                             </tr>
                         </table>
@@ -363,10 +363,10 @@
                         <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid black">
-                                    <h3> Homework 1 </h3>
+                                    <h3 style="font-size: 18px"> Homework 1 </h3>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h3> 9/10 </h3>
+                                    <h3 style="font-size: 18px"> 9/10 </h3>
                                 </td>
                             </tr>
                         </table>
@@ -375,10 +375,10 @@
                        <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid black">
-                                    <h3> Quiz 1 </h3>
+                                    <h3 style="font-size: 18px"> Quiz 1 </h3>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h3> 14/20 </h3>
+                                    <h3 style="font-size: 18px"> 14/20 </h3>
                                 </td>
                             </tr>
                         </table>
@@ -387,10 +387,10 @@
                        <table style="width:100%">
                             <tr>
                                 <td style="text-align: left;width: 70%; border-style: solid; border-right: 2px solid black">
-                                    <h3> Test 1 </h3>
+                                    <h3 style="font-size: 18px"> Test 1 </h3>
                                 </td>
                                 <td style="width: 30%;text-align: center">
-                                    <h3> 68/100 </h3>
+                                    <h3 style="font-size: 18px"> 68/100 </h3>
                                 </td>
                             </tr>
                         </table>
