h On branch master

--- a/andy-subjects.html
+++ b/andy-subjects.html
@@ -19,7 +19,7 @@
          <div data-role="page" id="select">
             <div data-theme="a" data-role="header">
                <h5 style="font-size: 30px">
-                    Select Child
+                    Andy - Subjects
                 </h5>
             </div>
             <div data-role="content">
@@ -94,9 +94,6 @@
                <h5 style="font-size: 30px">
                     Andy - Algebra
                 </h5>
-                <a data-role="button" data-inline="true" data-rel="back" data-transition="fade" data-theme="b"  data-icon="arrow-l" data-iconpos="left" style="position: absolute; top: 21%;">
-                    <span style="font-size: 20px">Back</span>
-                </a>
             </div>
             <div data-role="content">
                 <div style="">
