--- a/andy-subjects.html
+++ b/andy-subjects.html
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li data-theme="c">
-                        <a href="#andy-subjects" data-transition="slide">
+                        <a href="#andy-physics" data-transition="slide">
                             Physics
                         </a>
                     </li>
@@ -175,6 +175,88 @@
             </div>
         </div>
        
+	   <!-- After selection of Physics -->
+	   <div data-role="page" id="andy-physics">
+            <div data-theme="a" data-role="header" style="height: 30%;">
+               <h5 style="font-size: 30px">
+                    Andy - Physics
+                </h5>
+            </div>
+            <div data-role="content">
+                <div style="">
+                    <img style="width: 107px; height: 107px" src="http://assets.codiqa.com/ps/13915/53fc75f6412d99e8andy.png" />
+                </div>
+                <div data-role="collapsible-set" data-theme="" data-content-theme="">
+                    <div data-role="collapsible" data-collapsed="true">
+                        <h3>
+                            Grade
+                        </h3>
+						<p>
+							<ul data-role="listview">
+								<li>Overall Grade:  <em style="color:red">'A'</em></li>
+							</ul>
+						</p>
+                    </div>
+                </div>
+                <div data-role="collapsible-set" data-theme="" data-content-theme="">
+                    <div data-role="collapsible" data-collapsed="true">
+                        <h3>
+                            Assignments
+                        </h3>
+						<p>
+                <ul data-role="listview">
+                    <li>Assignment #3 completed !</li>
+                    <li>Assignment #2 completed !</li>
+                    <li>Assignment #1 completed !</li>
+                </ul>
+            </p>
+                    </div>
+					
+                </div>
+            </div>
+            <div data-theme="a" data-role="footer" data-position="fixed" >
+                <div data-role="navbar" data-iconpos="top">
+                    <ul>
+                        <li>
+                            <a data-transition="fade" data-rel="back" data-theme="" data-icon="back" >
+                                <span style="font-size: 30px">Back</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#homescreen" data-theme="" data-icon="home">
+                                <span style="font-size: 30px">Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#login" data-theme="" data-icon="delete">
+                                <span style="font-size: 30px">Exit</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+			<div data-theme="a" data-role="footer" data-position="fixed" >
+                <div data-role="navbar" data-iconpos="top">
+                    <ul>
+                        <li>
+                            <a data-transition="fade" data-rel="back" data-theme="" data-icon="back" >
+                                <span style="font-size: 30px">Back</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#homescreen" data-theme="" data-icon="home">
+                                <span style="font-size: 30px">Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#login" data-theme="" data-icon="delete">
+                                <span style="font-size: 30px">Exit</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <script>
             //App custom javascript
         </script>
