--- a/dueDates.html
+++ b/dueDates.html
@@ -19,7 +19,7 @@
         <div data-role="page" id="page3">
             <div data-theme="a" data-role="header">
                <h5 style="font-size: 30px">
-                    Select Child
+                    Due Dates
                 </h5>
             </div>
             <div data-role="content">
@@ -27,8 +27,8 @@
                     <li data-role="list-divider" role="heading">
                         <table style="width: 100%;">
                             <tr>
-                                <td style="width: 70%; font-size: 28px; padding: 10px;"><h2>Assignment</h2></td>
-                                <td style="width: 30%; font-size: 28px; padding: 10px;"><h2>Due Date<h2></td>
+                                <td style="width: 70%; font-size: 28px; padding: 10px; color: #ffffff;">Assignment</td>
+                                <td style="width: 30%; font-size: 28px; padding: 10px; color: #ffffff;">Due Date</td>
                             </tr>
                         </table>
                     </li>
@@ -36,8 +36,8 @@
                         <a href="#page1" data-transition="slide">
                             <table style="width: 100%;">
                                 <tr>
-                                    <td style="width: 70%; border-right: 2px solid #A4A4A4; font-size: 28px; padding: 10px;"><h2>Chapter 4, Problems 1-20</h2></td>
-                                    <td style="width: 30%; font-size: 28px; padding: 10px;"><h2>May 17th<h2></td>
+                                    <td style="width: 70%; border-right: 2px solid #A4A4A4; font-size: 20px; padding: 10px;">Chapter 4, Problems 1-20</td>
+                                    <td style="width: 30%; font-size: 20px; padding: 10px;">May 17th</td>
                                 </tr>
                             </table>
                         </a>
@@ -46,18 +46,18 @@
                         <a href="#page1" data-transition="slide">
                             <table style="width: 100%;">
                                 <tr>
-                                    <td style="width: 70%; border-right: 2px solid #A4A4A4; font-size: 28px; padding: 10px;"><h2>Worksheet 3</h2></td>
-                                    <td style="width: 30%; font-size: 28px; padding: 10px;"><h2>May 21st</h2></td>
+                                    <td style="width: 70%; border-right: 2px solid #A4A4A4; font-size: 20px; padding: 10px;">Worksheet 3</td>
+                                    <td style="width: 30%; font-size: 20px; padding: 10px;">May 21st</td>
                                 </tr>
-                                </table>
+                            </table>
                         </a>
                     </li>
                     <li data-theme="e">
                         <a href="#page1" data-transition="slide">
                             <table style="width: 100%;">
                                 <tr>
-                                    <td style="width: 70%; border-right: 2px solid #A4A4A4; font-size: 28px; padding: 10px;"><h2>Assignment 1</h2></td>
-                                    <td style="width: 30%; font-size: 28px; padding: 10px;"><h2>May 24th</h2></td>
+                                    <td style="width: 70%; border-right: 2px solid #A4A4A4; font-size: 20px; padding: 10px;">Assignment 1</td>
+                                    <td style="width: 30%; font-size: 20px; padding: 10px;">May 24th</td>
                                 </tr>
                             </table>
                         </a>
